--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endif()
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	message(STATUS "Using MSVC compiler options")
 	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+	add_definitions(-D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS)
 	if(SFWCL_MAPDL)
 		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
 	endif()
