update CMake config, fix mod_pak

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.2)
+cmake_minimum_required(VERSION 3.1)
 
 if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Type of build")
@@ -15,20 +15,28 @@ project(sfwcl)
 # install target is not used here
 set(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}" CACHE INTERNAL "")
 
-# Crysis SDK headers
-include_directories(src/cpp/mod/CryEngine)
+option(SFWCL_DLL "Build sfwcl.dll" ON)
+if(SFWCL_DLL)
+	if(MSVC)
+		# Crysis SDK headers
+		include_directories(src/cpp/mod/CryEngine)
+	endif()
+	file(GLOB SFWCL_DLL_SOURCES src/cpp/mod/*.cpp)
+	add_library(sfwcl MODULE ${SFWCL_DLL_SOURCES})
+endif()
 
-file(GLOB SFWCL_MOD_SOURCES src/cpp/mod/*.cpp)
-add_library(sfwcl MODULE ${SFWCL_MOD_SOURCES})
-
-option(SFWCL_PAK "Create sfwcl.pak" ON)
+option(SFWCL_PAK "Create sfwcl.pak (requires 7-zip)" OFF)
 if(SFWCL_PAK)
-	set(SFWCL_PAK_FILE "${PROJECT_BINARY_DIR}/sfwcl.pak")
-	set(SFWCL_PAK_BASE "${PROJECT_SOURCE_DIR}/src/lua")
+	set(SFWCL_PAK_FILE "${CMAKE_CURRENT_BINARY_DIR}/sfwcl.pak")
+	set(SFWCL_PAK_CONTENT "${CMAKE_CURRENT_SOURCE_DIR}/src/lua/Scripts")
+	find_program(7Z_EXE 7z PATHS "$ENV{ProgramFiles}/7-Zip" "$ENV{ProgramFiles\(x86\)}/7-Zip" DOC "Path to 7z executable")
+	if(NOT 7Z_EXE)
+		message(FATAL_ERROR "7-zip executable not found")
+	endif()
+	message(STATUS "Using 7-zip: ${7Z_EXE}")
 	add_custom_command(
 		OUTPUT ${SFWCL_PAK_FILE}
-		COMMAND ${CMAKE_COMMAND} -E tar cvf ${SFWCL_PAK_FILE} --format=zip Scripts
-		WORKING_DIRECTORY ${SFWCL_PAK_BASE}
+		COMMAND ${7Z_EXE} a -bb -bd -tzip ${SFWCL_PAK_FILE} ${SFWCL_PAK_CONTENT}
 	)
 	add_custom_target(mod_pak ALL DEPENDS ${SFWCL_PAK_FILE})
 endif()
@@ -43,29 +51,29 @@ if(SFWCL_MAPDL)
 	add_executable(MapDownloader src/cpp/mapdl/mapdl.cpp)
 	# hide not needed options of zlib
 	mark_as_advanced(FORCE ASM686 AMD64 INSTALL_BIN_DIR INSTALL_LIB_DIR INSTALL_INC_DIR INSTALL_MAN_DIR INSTALL_PKGCONFIG_DIR)
-	add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib" EXCLUDE_FROM_ALL)
+	add_subdirectory(lib/zlib EXCLUDE_FROM_ALL)
 	add_library(miniunz STATIC
-		"${PROJECT_SOURCE_DIR}/lib/zlib/contrib/minizip/unzip.c"
-		"${PROJECT_SOURCE_DIR}/lib/zlib/contrib/minizip/ioapi.c"
-		"${PROJECT_SOURCE_DIR}/lib/zlib/contrib/minizip/iowin32.c"
+		lib/zlib/contrib/minizip/unzip.c
+		lib/zlib/contrib/minizip/ioapi.c
+		lib/zlib/contrib/minizip/iowin32.c
 	)
 	target_include_directories(miniunz PUBLIC
-		"${PROJECT_SOURCE_DIR}/lib/zlib/contrib/minizip"
-		"${PROJECT_SOURCE_DIR}/lib/zlib"
-		"${PROJECT_BINARY_DIR}/lib/zlib"
+		${CMAKE_CURRENT_SOURCE_DIR}/lib/zlib/contrib/minizip
+		${CMAKE_CURRENT_SOURCE_DIR}/lib/zlib
+		${CMAKE_CURRENT_BINARY_DIR}/lib/zlib
 	)
 	target_link_libraries(miniunz zlibstatic)
 	target_link_libraries(MapDownloader miniunz)
 endif()
 
-if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+if(MSVC)
 	message(STATUS "Using MSVC compiler options")
 	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 	add_definitions(-D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS)
 	if(SFWCL_MAPDL)
 		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
 	endif()
-elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+else()
 	message(STATUS "Using GNU compiler options")
 	set(SFWCL_MINGW_STATIC_FLAGS "-static-libstdc++ -static-libgcc")
 	option(SFWCL_MINGW_STATIC "Link with ${SFWCL_MINGW_STATIC_FLAGS}" ON)
@@ -77,6 +85,4 @@ elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	if(SFWCL_MAPDL)
 		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "-mwindows")
 	endif()
-else()
-	message("Unknown compiler \'" ${CMAKE_CXX_COMPILER_ID} "\'")
 endif()
