add sfwcl_precheck to CMake config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ if(SFWCL_DLL)
 	endif()
 	file(GLOB SFWCL_DLL_SOURCES src/cpp/mod/*.cpp)
 	add_library(sfwcl MODULE ${SFWCL_DLL_SOURCES})
+	add_executable(sfwcl_precheck src/cpp/precheck/main.cpp)
 endif()
 
 # only Windows version of 7-zip creates valid .pak files
@@ -79,6 +80,9 @@ if(MSVC)
 	message(STATUS "Using MSVC compiler options")
 	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 	add_definitions(-D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS)
+	if(SFWCL_DLL)
+		set_target_properties(sfwcl_precheck PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /level='requireAdministrator' /uiAccess='false'")
+	endif()
 	if(SFWCL_MAPDL)
 		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
 	endif()
@@ -91,6 +95,7 @@ else()
 		list(APPEND CMAKE_SHARED_LINKER_FLAGS ${SFWCL_MINGW_STATIC_FLAGS})
 		list(APPEND CMAKE_MODULE_LINKER_FLAGS ${SFWCL_MINGW_STATIC_FLAGS})
 	endif()
+	# TODO: add MinGW linker UAC manifest to sfwcl_precheck
 	if(SFWCL_MAPDL)
 		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "-mwindows")
 	endif()
