CMake: refactor config, fix UAC flag on different versions of MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.7)
 
 if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Type of build")
@@ -53,6 +53,16 @@ endif()
 option(SFWCL_PRECHECK "Build sfwcl_precheck.exe" ON)
 if(SFWCL_PRECHECK)
 	add_executable(sfwcl_precheck src/cpp/precheck/main.cpp)
+	if(MSVC)
+		# VS2010 and higher
+		if(MSVC_IDE AND (MSVC_VERSION GREATER_EQUAL 1600))
+			set_target_properties(sfwcl_precheck PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /level='requireAdministrator' /uiAccess='false'")
+		else()
+			set_target_properties(sfwcl_precheck PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /MANIFESTUAC:\"level='requireAdministrator' uiAccess='false'\"")
+		endif()
+	else()
+
+	endif()
 endif()
 
 option(SFWCL_LAUNCHER "Build SafeWritingClient.exe" OFF)
@@ -64,7 +74,8 @@ option(SFWCL_MAPDL "Build MapDownloader.exe" OFF)
 if(SFWCL_MAPDL)
 	add_executable(MapDownloader src/cpp/mapdl/mapdl.cpp)
 	# hide not needed options of zlib
-	mark_as_advanced(FORCE ASM686 AMD64 INSTALL_BIN_DIR INSTALL_LIB_DIR INSTALL_INC_DIR INSTALL_MAN_DIR INSTALL_PKGCONFIG_DIR)
+	mark_as_advanced(FORCE ASM686 AMD64 CMAKE_BACKWARDS_COMPATIBILITY EXECUTABLE_OUTPUT_PATH LIBRARY_OUTPUT_PATH)
+	mark_as_advanced(FORCE INSTALL_BIN_DIR INSTALL_LIB_DIR INSTALL_INC_DIR INSTALL_MAN_DIR INSTALL_PKGCONFIG_DIR)
 	add_subdirectory(lib/zlib EXCLUDE_FROM_ALL)
 	add_library(miniunz STATIC
 		lib/zlib/contrib/minizip/unzip.c
@@ -78,29 +89,26 @@ if(SFWCL_MAPDL)
 	)
 	target_link_libraries(miniunz zlibstatic)
 	target_link_libraries(MapDownloader miniunz)
+	if(MSVC)
+		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
+	else()
+		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "-mwindows")
+	endif()
 endif()
 
 if(MSVC)
 	message(STATUS "Using MSVC compiler options")
 	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 	add_definitions(-D_SILENCE_STDEXT_HASH_DEPRECATION_WARNINGS)
-	if(SFWCL_DLL)
-		set_target_properties(sfwcl_precheck PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /level='requireAdministrator' /uiAccess='false'")
-	endif()
-	if(SFWCL_MAPDL)
-		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
-	endif()
 else()
 	message(STATUS "Using GNU compiler options")
+	mark_as_advanced(FORCE CMAKE_GNUtoMS)
 	set(SFWCL_MINGW_STATIC_FLAGS "-static-libstdc++ -static-libgcc")
 	option(SFWCL_MINGW_STATIC "Link with ${SFWCL_MINGW_STATIC_FLAGS}" ON)
 	if(SFWCL_MINGW_STATIC)
 		list(APPEND CMAKE_EXE_LINKER_FLAGS ${SFWCL_MINGW_STATIC_FLAGS})
-		list(APPEND CMAKE_SHARED_LINKER_FLAGS ${SFWCL_MINGW_STATIC_FLAGS})
 		list(APPEND CMAKE_MODULE_LINKER_FLAGS ${SFWCL_MINGW_STATIC_FLAGS})
-	endif()
-	# TODO: add MinGW linker UAC manifest to sfwcl_precheck
-	if(SFWCL_MAPDL)
-		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "-mwindows")
+		list(APPEND CMAKE_SHARED_LINKER_FLAGS ${SFWCL_MINGW_STATIC_FLAGS})
+		list(APPEND CMAKE_STATIC_LINKER_FLAGS ${SFWCL_MINGW_STATIC_FLAGS})
 	endif()
 endif()
