add GS logo replacement to sfwcl.pak

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,10 @@ if(CMAKE_HOST_WIN32)
 	if(SFWCL_PAK)
 		set(SFWCL_PAK_FILE "${CMAKE_CURRENT_BINARY_DIR}/sfwcl.pak")
 		set(SFWCL_PAK_CONTENT "${CMAKE_CURRENT_SOURCE_DIR}/src/lua/Scripts")
+		option(SFWCL_PAK_CRYMP_LOGO "Add CryMP logo (GameSpy logo replacement) to sfwcl.pak" ON)
+		if(SFWCL_PAK_CRYMP_LOGO)
+			list(APPEND SFWCL_PAK_CONTENT "${CMAKE_CURRENT_SOURCE_DIR}/lib/crymp_logo/Libs")
+		endif()
 		find_program(7Z_EXE 7z PATHS "$ENV{ProgramFiles}/7-Zip" "$ENV{ProgramFiles\(x86\)}/7-Zip" DOC "Path to 7z executable")
 		if(NOT 7Z_EXE)
 			message(FATAL_ERROR "7-zip executable not found")
