--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ if(SFWCL_LAUNCHER)
 	add_executable(SafeWritingClient src/cpp/launcher/launcher.cpp)
 endif()
 
-option(SFWCL_MAPDL_DLL "Build MapDownloader.dll" ON)
+option(SFWCL_MAPDL_DLL "Build mapdl.dll" ON)
 option(SFWCL_MAPDL_EXE "Build MapDownloader.exe" OFF)
 
 if(SFWCL_MAPDL_DLL OR SFWCL_MAPDL_EXE)
@@ -97,20 +97,18 @@ if(SFWCL_MAPDL_DLL OR SFWCL_MAPDL_EXE)
 endif()
 
 if(SFWCL_MAPDL_DLL)
-	add_library(mapdl_dll MODULE src/cpp/mapdl/mapdl.cpp)
-	target_compile_definitions(mapdl_dll PUBLIC -DMAKE_DLL)
-	target_link_libraries(mapdl_dll miniunz)
-	set_target_properties(mapdl_dll PROPERTIES OUTPUT_NAME "MapDownloader")
+	add_library(mapdl MODULE src/cpp/mapdl/mapdl.cpp)
+	target_compile_definitions(mapdl PUBLIC -DMAKE_DLL)
+	target_link_libraries(mapdl miniunz)
 endif()
 
 if(SFWCL_MAPDL_EXE)
-	add_executable(mapdl_exe src/cpp/mapdl/mapdl.cpp)
-	target_link_libraries(mapdl_exe miniunz)
-	set_target_properties(mapdl_exe PROPERTIES OUTPUT_NAME "MapDownloader")
+	add_executable(MapDownloader src/cpp/mapdl/mapdl.cpp)
+	target_link_libraries(MapDownloader miniunz)
 	# VS2010 and higher
 	if(MSVC_IDE AND (MSVC_VERSION GREATER_EQUAL 1600))
-		set_target_properties(mapdl_exe PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /level='requireAdministrator' /uiAccess='false'")
+		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /level='requireAdministrator' /uiAccess='false'")
 	else()
-		set_target_properties(mapdl_exe PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /MANIFESTUAC:\"level='requireAdministrator' uiAccess='false'\"")
+		set_target_properties(MapDownloader PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /MANIFESTUAC:\"level='requireAdministrator' uiAccess='false'\"")
 	endif()
 endif()
